--- a/src/app/main/our-team/member/member.component.html
+++ b/src/app/main/our-team/member/member.component.html
@@ -1,4 +1,4 @@
-<img [srcset]="memberImg" [src]="member.imageUrl.w1080" />
+<img [srcset]="member.imageUrl | imageset" [src]="member.imageUrl.w1080" />
 <h3>{{ member.block.title }}</h3>
 <p>{{ member.block.description }}</p>
 <a [href]="'mailto:' + member.block.link">{{ member.block.link }}</a>
