add handling errors

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,2 @@
-<app-our-team [data]="ourTeamData"></app-our-team>
+<app-our-team *ngIf="ourTeamData" [data]="ourTeamData"></app-our-team>
+<p *ngIf="error">{{ error }}</p>
