--- a/src/app/shared/components/section/section.component.scss
+++ b/src/app/shared/components/section/section.component.scss
@@ -1,4 +1,4 @@
-.member-container {
+.content {
   display: flex;
   flex-wrap: wrap;
 }
@@ -6,4 +6,8 @@
 h2 {
   color: var(--darkBlue);
   text-align: center;
+}
+
+.wrapper {
+  padding: 1rem 0.5rem;
 }
